--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
     </div>
 </section>
-<section>
+<!-- <section>
     <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -135,7 +135,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-</section>
+</section> -->
 <section class="container mt-5" id="contact">
     <h2>Contacto</h2>
     <form>
@@ -153,8 +153,8 @@
 
 
 
-<footer class="text-center py-3" style="background: #333; color: white;">
-    <p>&copy; 2025 Motos Premium. Todos los derechos reservados.</p>
+<footer class="text-center py-3" style="background: #833cbd; color: white;">
+    <p>&copy; 2025 Saikō no anime. Todos los derechos reservados.</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
